--- a/package.json
+++ b/package.json
@@ -14,14 +14,21 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "7.0.22",
+    "canvas-prebuilt": "^1.6.5-prerelease.1",
+    "canvas2svg": "^1.0.16",
+    "chart.js": "^2.7.2",
     "express": "4.15.3",
+    "jsdom": "^11.11.0",
     "nodemon": "1.11.0"
   },
   "devDependencies": {
+    "@types/jsdom": "^11.0.6",
     "@types/mocha": "2.2.41",
     "@types/node": "7.0.22",
-    "eslint": "4.0.0",
+    "@types/chart.js": "^2.7.27",
+    "@types/chartjs": "0.0.31",
+    "@types/express": "^4.16.0",
+    "eslint": "^4.0.0",
     "eslint-config-airbnb-base": "11.2.0",
     "eslint-plugin-import": "2.3.0",
     "eslint-plugin-promise": "3.5.0",
